--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "blog-app",
   "version": "1.0.0",
+  "descripƟon": "A simple blog-app Node.js project with Express and MongoDB",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": ["express", "mongodb", "nodejs"],
+  "author": "Akash Kumar Shukla",
+  "license": "MIT",
   "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -22,5 +23,9 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
+  },
+  "engines": {
+    "node": "18x",
+    "npm": ">=6.0.0"
   }
 }
